# graphene-jwt-sample

./: README.md  manage.py  pyproject.toml
graphene_jwt_sample/: asgi.py  urls.py  wsgi.py
graphene_jwt_sample/config/: db.sqlite3  schema.py
graphene_jwt_sample/config/keys/jwt/: private_jwk.pem  public_jwk.json  public_jwk.pem
graphene_jwt_sample/config/settings/: base.py
graphene_jwt_sample/core/: apps.py
graphene_jwt_sample/core/utils/: jwt.py
graphene_jwt_sample/graphql/: api.py
graphene_jwt_sample/graphql/account/: schema.py  types.py
graphene_jwt_sample/graphql/transportation/: resolvers.py  schema.py  types.py
graphene_jwt_sample/transportation/: admin.py  apps.py  models.py
graphene_jwt_sample/transportation/migrations/: 0001_initial.py  0002_auto_20210512_0814.py
